Creados todos los archivos

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,26 +11,29 @@ nav:
       - "4.- AWS EC2": "apuntes/arquitecturas04.md"
       - "5.- AWS S3": "apuntes/arquitecturas05.md"
       - "6.- Azure": "apuntes/arquitecturas06.md"
+      - "Ejercicios": "ejercicios/ej-arquitecturas.md"
   - "Ingesta de Datos":
-      - "1.- ETL": "ejercicios/index.md"
-      - "2.- ETL con SQL/Python": "ejercicios/index.md"
-      - "3.- Pentaho": "ejercicios/index.md"
-      - "4.- Pentaho multidimensional": "ejercicios/index.md"
-      - "5.- Nifi I": "ejercicios/index.md"
-      - "6.- Nifi II": "ejercicios/index.md"
+      - "1.- ETL": "apuntes/ingesta01.md"
+      - "2.- ETL con SQL/Python": "apuntes/ingesta02.md"
+      - "3.- Pentaho": "apuntes/ingesta03.md"
+      - "4.- Pentaho multidimensional": "apuntes/ingesta04.md"
+      - "5.- Nifi I": "apuntes/ingesta05.md"
+      - "6.- Nifi II": "apuntes/ingesta06.md"
+      - "Ejercicios": "ejercicios/ej-ingesta.md"
   - "Big Data Aplicado":
       - "1.- Hadoop": "apuntes/bdaplicado01.md"
-      - "2.- HDFS": "ejercicios/index.md"
-      - "3.- Hive": "ejercicios/index.md"
-      - "4.- Flume / Sqoop": "ejercicios/index.md"
-      - "5.- Kafka": "ejercicios/index.md"
+      - "2.- HDFS": "apuntes/bdaplicado02.md"
+      - "3.- Hive": "apuntes/bdaplicado03.md"
+      - "4.- Flume / Sqoop": "apuntes/bdaplicado04.md"
+      - "5.- Kafka": "apuntes/bdaplicado05.md"
       - "6.- Spark":
           - "6.1.-Trabajando con Spark": "apuntes/bdaplicado0601.md"
-          - "6.2.-Spark RDD": "ejercicios/index.md"
-          - "6.3.-Spark Avanzado": "ejercicios/index.md"
-          - "6.4.-Spark SQL": "ejercicios/index.md"
-          - "6.5.-Spark Streaming I": "ejercicios/index.md"
-          - "6.6.-Spark Streaming II": "ejercicios/index.md"
+          - "6.2.-Spark RDD": "apuntes/bdaplicado0602.md"
+          - "6.3.-Spark Avanzado": "apuntes/bdaplicado0603.md"
+          - "6.4.-Spark SQL": "apuntes/bdaplicado0604.md"
+          - "6.5.-Spark Streaming I": "apuntes/bdaplicado0605.md"
+          - "6.6.-Spark Streaming II": "apuntes/bdaplicado0606.md"
+      - "Ejercicios": "ejercicios/ej-bdaplicado.md"
 
 theme:
   language: es
