--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,10 +6,10 @@ nav:
   - "Inicio": "index.md"
   - "Arquitecturas Big Data":
       - "1.- Cloud Computing": "apuntes/nube01.md"
-      - "2.- AWS": "apuntes/nube02.md"
-      - "3.- Computación en AWS": "apuntes/nube03.md"
-      - "4.- Almacenamiento en AWS": "apuntes/nube04.md"
-      - "5.- Datos en AWS": "apuntes/nube05.md"
+      - "2.- AWS": "apuntes/nube02aws.md"
+      - "3.- Computación en AWS": "apuntes/nube03computacion.md"
+      - "4.- Almacenamiento en AWS": "apuntes/nube04almacenamiento.md"
+      - "5.- Datos en AWS": "apuntes/nube05datos.md"
       - "6.- Arquitecturas": "apuntes/arquitecturas01.md"
   # - "Ingesta de Datos":
   #     - "1.- ETL": "apuntes/ingesta01.md"
@@ -56,9 +56,13 @@ extra:
       link: https://twitter.com/aitormedrano
     - icon: fontawesome/solid/envelope-square
       link: mailto:<a.medrano@edu.gva.es>
+  analytics:
+    provider: google
+    property: G-MV889H0W63
+
 plugins:
   - search
-
+  
 markdown_extensions:
   - attr_list
   - admonition
