--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,7 +44,7 @@ theme:
   font:
     text: Roboto
     code: Roboto Mono
-  logo: "imagenes/logofp.png"
+  logo: "imagenes/logoIABD3.png"
   features:
     - header.autohide
     - navigation.top
