--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,6 +69,8 @@ markdown_extensions:
   - pymdownx.highlight:
       linenums: true
       linenums_style: pymdownx-inline
+  - pymdownx.tabbed:
+      alternate_style: true
   - pymdownx.superfences
   - pymdownx.caret
   - pymdownx.mark
