--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,7 @@ theme:
   features:
     - header.autohide
     - navigation.top
+    - navigation.expand
     - navigation.tracking
     - content.code.annotate
 
@@ -76,12 +77,17 @@ markdown_extensions:
   - pymdownx.caret
   - pymdownx.mark
   - pymdownx.tilde
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
   - footnotes
   - meta
   - sane_lists
   - toc:
       permalink: true
       toc_depth: 3
+
+
 
 copyright: 2021-2022 Aitor Medrano - Licencia CC BY-NC-SA
 # docker run --name=mkdocs -v "C:\Users\Aitor\OneDrive - Conselleria d'Educació\2122\bigdata:/app" -w /app/doc -p 8000:8000 minidocks/mkdocs serve -a 0.0.0.0:8000 -t material
